syntax = "proto3";
package model;
service Encryptor {
    rpc Encrypt(EncryptRequest) returns (EncryptResponse){
    }
}


message Hash {
    string md5 = 1;
    string sha256 = 2;
}
message EncryptRequest {
    string source = 1;
    string destination = 2;
}

message EncryptResponse {
    Hash source_hash = 1;
    Hash destination_hash = 2;
}
service Decryptor {

    rpc Decrypt(DecryptRequest) returns (DecryptResponse){
    }
}
message DecryptRequest {
    string source = 1;
    string destination = 2;
}

message DecryptResponse {
    Hash source_hash = 1;
    Hash destination_hash = 2;
}
